--- a/index.html
+++ b/index.html
@@ -282,6 +282,19 @@
             <h4 class="recommended">Recommended:</h4>
             <pre><code class="recommended">&lt;a href="login/" class="btn btn-secondary"&gt;Login&lt;/a&gt;</code></pre>
         </article>
+        <article>
+            <h3>
+                <a href="#quotes" id="quotes"><i class="fa fa-link"></i></a>
+                mohamed eid
+            </h3>
+            <p>i lives in alexandria.</p>
+
+            <h4 class="not-recommended">Not Recommended:</h4>
+            <pre><code class="not-recommended">&lt;a href='login/' class='btn btn-secondary'&gt;Login&lt;/a&gt;</code></pre>
+
+            <h4 class="recommended">Recommended:</h4>
+            <pre><code class="recommended">&lt;a href="login/" class="btn btn-secondary"&gt;Login&lt;/a&gt;</code></pre>
+        </article>
     </section>
 </body>
 </html>
